# ExecJSParser

Source/: 1-0-functions.js  1-1-comments.js  2-0-expressions.js  2-01-numbers.js  2-1-return.js  2-1-strings.js  2-2-numbers.js  2-2-string-interpolation.js  2-3-variables.js  2-4-if.js
parser/: Cargo.toml
parser/src/: keyword.rs  main.rs  util.rs
parser/src/expr/: mod.rs
parser/src/fnbody/: mod.rs  statement.rs
