[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A byte-oriented, zero-copy, parser combinators library
nom = "7.1.3"

# A collection of excellent utilities for nom
nom-supreme = "0.8.0"

